--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,25 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: "Peter Zujko"
+email: zujko@csh.rit.edu
+description: ""
+baseurl: ""
+url: "localhost:4000"
+title_description: "Developer &bull; Computer Science student  &bull; <i class=\"fa fa-android fa-lg\"></i> = <i class=\"fa fa-heart fa-lg\"></i>"
+title_image: "https://secure.gravatar.com/avatar/a4055ddbdcb86ec61d69c6c915c404cb?&size=200&default=mm&rating=pg"
+disqus_account: peterzujko
+github_repository: https://github.com/zujko/zujko.github.io
+post_limit: 5
 
+# Social usernames/URLs
+twitter_username: PeterZujko
+github_username:  zujko
+linkedin_link: https://www.linkedin.com/in/zujko
+
+# Footer
+footer_center: "&lt;/&gt; on <a href=\"https://github.com/zujko/zujko.github.io\" target=\"_new\">Github</a> &nbsp;<i class=\"fa fa-github\"></i> <br> &copy; 2015 Peter Zujko <br> Licensed under the <a href=\"https://www.gnu.org/licenses/gpl-3.0.html\" target=\"_new\">The GNU General Public License v3.0</a>"
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript"]
+permalink: pretty
+exclude: [vendor]
