--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Peter Zujko"
-email: zujko@csh.rit.edu
+email: peter@zujko.xyz
 description: ""
 baseurl: ""
 url: "localhost:4000"
