Update image and linkedin username

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ disqus: false
 
 # if you don't have any of social below, comment the line
 twitter: PeterZujko
-linkedin: mylinkedin
+linkedin: zujko
 github: zujko
 email: peter@zujko.xyz
 
